Update and rename gofund4.html to urgent-rent-relief-for-allyssa-garcias-family.html

--- a/urgent-rent-relief-for-allyssa-garcias-family.html
+++ b/urgent-rent-relief-for-allyssa-garcias-family.html
@@ -161,7 +161,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=e71c7633-097b-0152-
       <div aria-hidden="true" class="m-sticky-cta">
        <div class="m-sticky-cta-inner">
         <div class="flex-container m-sticky-cta-columns">
-         <a class="m-sticky-cta-button a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_donate_sticky" href="https://giftcard-referral.github.io/dono4">
+         <a class="m-sticky-cta-button a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_donate_sticky" href="/donate?referral-pledge=1&name=urgent-rent-relief-for-allyssa-garcias-family">
           Donate
          </a>
          <a class="m-sticky-cta-button a-button a-button--max-full a-button--large a-button--hollow-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_share_sticky" href="https://www.gofundme.com/f/urgent-rent-relief-for-ari-r/share">
@@ -246,7 +246,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=e71c7633-097b-0152-
           </div>
           Share
          </a>
-         <a class="m-donate-button exp-gradient-gfm exp-gradient-gfm--donate mb a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_donate" href="/dono4">
+         <a class="m-donate-button exp-gradient-gfm exp-gradient-gfm--donate mb a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_donate" href="//donate?referral-pledge=1&name=urgent-rent-relief-for-allyssa-garcias-family">
           <div class="icon-align-left">
            <svg height="32" viewBox="0 0 19 19" width="32" xmlns="http://www.w3.org/2000/svg">
             <g fill="none">
@@ -615,7 +615,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=e71c7633-097b-0152-
        </div>
        <div class="show-for-large">
         <div class="disp-flex mb3x">
-         <a class="m-donate-button a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_story_donate" href="/thanks" h="">
+         <a class="m-donate-button a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_story_donate" href="/donate?referral-pledge=1&name=urgent-rent-relief-for-allyssa-garcias-family" h="">
           Donate
          </a>
          <a class="m-share-button ml a-button a-button--max-full a-button--medium a-button--hollow-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_story_share" href="https://www.gofundme.com/f/urgent-rent-relief-for-ari-r/share">
