--- a/thanks.html
+++ b/thanks.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <title>
-   Page Not Found
+   Thank you!
   </title>
   <meta charset="utf-8" data-react-helmet="true"/>
   <meta content="ie=edge" data-react-helmet="true" http-equiv="x-ua-compatible"/>
