--- a/urgent-rent-relief-for-allyssa-garcias-family.html
+++ b/urgent-rent-relief-for-allyssa-garcias-family.html
@@ -246,7 +246,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=e71c7633-097b-0152-
           </div>
           Share
          </a>
-         <a class="m-donate-button exp-gradient-gfm exp-gradient-gfm--donate mb a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_donate" href="//donate?referral-pledge=1&name=urgent-rent-relief-for-allyssa-garcias-family">
+         <a class="m-donate-button exp-gradient-gfm exp-gradient-gfm--donate mb a-button a-button--max-full a-button--large a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_donate" href="/donate?referral-pledge=1&name=urgent-rent-relief-for-allyssa-garcias-family">
           <div class="icon-align-left">
            <svg height="32" viewBox="0 0 19 19" width="32" xmlns="http://www.w3.org/2000/svg">
             <g fill="none">
