--- a/urgent-rent-relief-for-allyssa-garcias-family.html
+++ b/urgent-rent-relief-for-allyssa-garcias-family.html
@@ -134,7 +134,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=e71c7633-097b-0152-
          </a>
         </li>
         <li class="show-for-large pl">
-         <a class="a-button a-button--inline a-button--small a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_nav_donate" href="/thanks">
+         <a class="a-button a-button--inline a-button--small a-button--solid-yellow a-link" data-analytic-event-listener="true" data-element-id="btn_nav_donate" href="/donate?referral-pledge=1&name=urgent-rent-relief-for-allyssa-garcias-family">
           Donate
          </a>
         </li>
