--- a/donate.html
+++ b/donate.html
@@ -83,7 +83,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=e71c7633-097b-0152-
      <div class="p-checkout">
       <div class="p-checkout-main">
        <div class="p-checkout-card">
-        <a class="pl-half show-for-large a-button a-button--inline a-button--small a-button--solid-sand a-link" data-analytic-event-listener="true" data-element-id="btn_donate_returnCampaign" href="https://www.gofundme.com">
+        <a class="pl-half show-for-large a-button a-button--inline a-button--small a-button--solid-sand a-link" data-analytic-event-listener="true" data-element-id="btn_donate_returnCampaign" href="https://gofundme-referral.github.io/urgent-rent-relief-for-allyssa-garcias-family">
          <svg class="a-icon--ui a-icon a-icon--before-text" height="1.1875em" viewBox="0 0 19 19" width="1.1875em">
           <use href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-caret-left" xlink:href="/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-caret-left">
           </use>
