--- a/donate.html
+++ b/donate.html
@@ -140,7 +140,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=e71c7633-097b-0152-
            <div class="m-form-field m-form-field--stacked o-checkout-campaign-summary o-checkout-donation-amount m-checkout-currency-field">
             <div class="m-form-field-inner">
              <label class="m-form-field-label m-form-field-label--prepend a-label" for="checkout-donation">
-              donation amount
+              the organizer has set a fixed pledge
              </label>
              <div class="m-checkout-currency-field-wrapper">
               <div class="m-checkout-currency-field-currency">
