--- a/urgent-rent-relief-for-allyssa-garcias-family.html
+++ b/urgent-rent-relief-for-allyssa-garcias-family.html
@@ -44,9 +44,9 @@ My name is Ari. I'm an Americorps volunteer this year and serving LGBTQ+ youth i
   <link data-react-helmet="true" href="https://pt.gofundme.com/f/urgent-rent-relief-for-ari-r" hreflang="pt-br" rel="alternate">
   <link data-react-helmet="true" href="https://www.gofundme.com/f/urgent-rent-relief-for-ari-r" hreflang="x-default" rel="alternate">
   <link href="https://www.gofundme.com/static/media/favicon.372ed0034c294d802d456afd91383e6d.ico" rel="icon">
-  <link href="https://www.gofundme.com/static/css/vendor~main~084f635a.2db7ffe2c921f0511e13.css" rel="stylesheet" type="text/css">
+  <link href="https://www.gofundme.com//static/css/vendor~main~084f635a.feb2d9901832a39322e2.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900&amp;display=fallback" media="all" rel="stylesheet">
-  <link href="https://www.gofundme.com/static/css/main~48789f8a.4404ee7f1a7bbb27893b.css" rel="stylesheet" type="text/css">
+  <link href="https://www.gofundme.com/static/css/main~48789f8a.c0b54fb30ed814b91ad8.css" rel="stylesheet" type="text/css">
  
   <style data-fbcssmodules="css:fb.css.basecss:fb.css.dialog css:fb.css.iframewidget" type="text/css">
    .fb_hidden{position:absolute;top:-10000px;z-index:10001}.fb_reposition{overflow:hidden;position:relative}.fb_invisible{display:none}.fb_reset{background:none;border:0;border-spacing:0;color:#000;cursor:auto;direction:ltr;font-family:"lucida grande", tahoma, verdana, arial, sans-serif;font-size:11px;font-style:normal;font-variant:normal;font-weight:normal;letter-spacing:normal;line-height:1;margin:0;overflow:visible;padding:0;text-align:left;text-decoration:none;text-indent:0;text-shadow:none;text-transform:none;visibility:visible;white-space:normal;word-spacing:normal}.fb_reset>div{overflow:hidden}@keyframes fb_transform{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}.fb_animate{animation:fb_transform .3s forwards}
