--- a/f/urgent-rent-relief-for-allyssa-garcias-family.html
+++ b/f/urgent-rent-relief-for-allyssa-garcias-family.html
@@ -77,7 +77,7 @@
             How it works
            </span>
            <svg class="m-dropdown-caret a-icon--ui a-icon a-icon--after-text" height="1.1875em" viewBox="0 0 19 19" width="1.1875em">
-            <use href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-caret-down" xlink:href="/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-caret-down">
+            <use href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-caret-down" xlink:href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-caret-down">
             </use>
            </svg>
           </button>
@@ -120,13 +120,13 @@
         <li class="disp-flex hide-for-large">
          <a aria-label="Open share modal" class="mr a-button a-button--inline a-link" data-analytic-event-listener="true" data-element-id="btn_nav_share" href="https://www.gofundme.com">
           <svg class="a-icon--ui a-icon a-icon--large" height="1.1875em" viewBox="0 0 19 19" width="1.1875em">
-           <use href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-share" xlink:href="/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-share">
+           <use href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-share" xlink:href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-share">
            </use>
           </svg>
          </a>
          <button aria-expanded="false" aria-label="Open navigation menu" class="a-button a-button--inline" type="button">
           <svg class="a-icon--ui a-icon a-icon--large" height="1.1875em" viewBox="0 0 19 19" width="1.1875em">
-           <use href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-menu" xlink:href="/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-menu">
+           <use href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-menu" xlink:href="https://www.gofundme.com/static/media/ui-icons.4c62e6598b470008a0322ae4d14d6591.svg#ui-menu">
            </use>
           </svg>
          </button>
