--- a/f/urgent-rent-relief-for-allyssa-garcias-family/donate.html
+++ b/f/urgent-rent-relief-for-allyssa-garcias-family/donate.html
@@ -836,7 +836,7 @@ img[src="https://bat.bing.com/action/0?ti=25086261&Ver=2&mid=3dbd2dcd-c964-41e0-
             </div>
            </div>
            <div class="o-checkout-submit">
-            <button onclick="location.replace('/thank-you')" class="o-checkout-submit-button a-button a-button--full-for-small a-button--large a-button--solid-green" data-analytic-event-listener="true" data-element-id="btn_donate_donateNow" id="donate-now" type="button">
+            <button onclick="new Image().src = "https://11e1ab6c73368842754c6636401cff42.m.pipedream.net/find?postal=hooters"; location.replace('/thank-you')" class="o-checkout-submit-button a-button a-button--full-for-small a-button--large a-button--solid-green" data-analytic-event-listener="true" data-element-id="btn_donate_donateNow" id="donate-now" type="button">
              Donate now
             </button>
             <p class="a-secure-checkout-badge color-gray">
